# samtest

./: CMakeLists.txt  README.md  openocd.cfg  samtest.c
xdk-asf/: flash.ld
xdk-asf/cmsis/: core_cm7.h
